homepage minor alignment issue

--- a/src/sass/_homepage.scss
+++ b/src/sass/_homepage.scss
@@ -126,9 +126,7 @@
     .pane-news-and-media{
       @extend .view-news-and-media;
       .pane-title{
-        a{
           @extend .hp-title;
-        }
       }
     }
   }
